--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,7 @@
 
     <title>Гараж ЦОДД</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <!-- <script defer src="https://unpkg.com/swiper@5.3.8/js/swiper.min.js"></script> -->
     <script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 </head>
 <body class="main">
@@ -330,63 +331,6 @@
                             Дорожный патруль нельзя вызвать. Задания экипажи получают от&nbsp;дежурных Ситуационного центра ЦОДД
                         </p>
                     </div>
-                    <div class="traffic_patrol-slide-6">
-                        <div class="traffic_patrol_slider-wrapper swiper">
-                            <div class="traffic_patrol_slider swiper-wrapper">
-                                <a class="garage_model_card swiper-slide" href="amarok.html">
-                                    <div class="slid_img">
-                                        <picture>
-                                            <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап" fetchpriority="high">
-                                        </picture>
-                                        <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
-                                    </div>
-                                    <div class="slid_info">
-                                        <div class="slid_info-desc">
-                                            <p class="slid_info-title">Дорожный патруль</p>
-                                            <p class="slid_info-text">Пикап</p>
-                                        </div>
-                                        <div class="slid_info-link">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                                <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                                    <rect width="18" height="18" fill="#D9D9D9"/>
-                                                </mask>
-                                                <g mask="url(#mask0_1137_313)">
-                                                    <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                                </g>
-                                            </svg>
-                                        </div>
-                                    </div>
-                                </a>
-                                <a class="garage_model_card swiper-slide" href="ford.html">
-                                    <div class="slid_img">
-                                        <picture>
-<!--                                            <source srcset="./img/layout/pages/main/slider/ford.webp" type="image/webp">-->
-                                            <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Патрульный фургон" fetchpriority="high">
-                                        </picture>
-<!--                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Патрульный фургон">-->
-                                        <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>
-                                    </div>
-                                    <div class="slid_info">
-                                        <div class="slid_info-desc">
-                                            <p class="slid_info-title">Дорожный патруль</p>
-                                            <p class="slid_info-text">Фургон</p>
-                                        </div>
-                                        <div class="slid_info-link">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                                <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                                    <rect width="18" height="18" fill="#D9D9D9"/>
-                                                </mask>
-                                                <g mask="url(#mask0_1137_313)">
-                                                    <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                                </g>
-                                            </svg>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="swiper-pagination"></div>
-                        </div>
-                    </div>
                     <div class="traffic_patrol-slide-kamaz_NOSLIDER">
                         <a class="garage_model_card swiper-slide parentCardForLargeMonitor model_1" href="kamaz.html">
                             <div class="slid_img">
@@ -439,10 +383,8 @@
                         <a class="garage_model_card swiper-slide parentCardForLargeMonitor model_3" href="ford.html">
                             <div class="slid_img">
                                 <picture>
-<!--                                            <source srcset="./img/layout/pages/main/slider/ford.webp" type="image/webp">-->
                                     <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Патрульный фургон" fetchpriority="high">
                                 </picture>
-<!--                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Патрульный фургон">-->
                                 <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
@@ -463,18 +405,18 @@
                             </div>
                         </a>
                     </div>
+                    <div class="traffic_patrol-slider-buttons InGrid">
+                        <div class="btn_prev">
+                            <img class="prev_img" src="./img/layout/pages/main/slider/arrow_green.svg" alt="btn_prev">
+                        </div>
+                        <div class="btn_next">
+                            <img class="next_img" src="./img/layout/pages/main/slider/arrow_green.svg" alt="btn_next">
+                        </div>
+                    </div>
                     <div class="traffic_patrol-slide-kamaz">
-                        <!-- <div class="traffic_patrol-slider-buttons">
-                            <div class="btn_prev">
-                                <img class="prev_img" src="./img/layout/pages/main/slider/arrow_green.svg" alt="btn_prev">
-                            </div>
-                            <div class="btn_next">
-                                <img class="next_img" src="./img/layout/pages/main/slider/arrow_green.svg" alt="btn_next">
-                            </div>
-                        </div> -->
-                        <div class="traffic_patrol_slider-wrapper swiperKamaz">
+                        <div class="traffic_patrol_slider-wrapper swiper1">
                             <div class="traffic_patrol_slider swiper-wrapper">
-                                <a class="garage_model_card swiper-slide parentCardForLargeMonitor" href="kamaz.html">
+                                 <a class="garage_model_card swiper-slide parentCardForLargeMonitor" href="kamaz.html">
                                     <div class="slid_img">
                                         <picture>
                                             <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап" fetchpriority="high">
@@ -525,10 +467,8 @@
                                 <a class="garage_model_card swiper-slide parentCardForLargeMonitor" href="ford.html">
                                     <div class="slid_img">
                                         <picture>
-<!--                                            <source srcset="./img/layout/pages/main/slider/ford.webp" type="image/webp">-->
                                             <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Патрульный фургон" fetchpriority="high">
                                         </picture>
-<!--                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Патрульный фургон">-->
                                         <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>
                                     </div>
                                     <div class="slid_info">
@@ -549,10 +489,10 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="swiper-pagination"></div>
+                            <div class="swiper-pagination1"></div>
                         </div>
                     </div>
-                    <div class="traffic_patrol-new_NOSLIDER">
+                    <!-- <div class="traffic_patrol-new_NOSLIDER">
                         <a class="garage_model_card NOSLIDE_1" href="amarok.html">
                             <div class="slid_img">
                                 <picture>
@@ -601,8 +541,8 @@
                                 </div>
                             </div>
                         </a>
-                    </div>
-                    <div class="traffic_patrol-no-slide-7 parentCardForLargeMonitor">
+                    </div> -->
+                    <!-- <div class="traffic_patrol-no-slide-7 parentCardForLargeMonitor">
                         <a class="garage_model_card" href="amarok.html">
                             <div class="slid_img">
                                 <picture>
@@ -653,7 +593,7 @@
                                 </div>
                             </div>
                         </a>
-                    </div>
+                    </div> -->
                     <div class="traffic_patrol-text-mobile-1">
                         <p class="traffic_patrol-text">
                             Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве. Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при&nbsp;поломке или аварии
