--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -294,6 +294,13 @@
             <div class="auto_park_slider">
                 <div class="auto_park_slider-overflow swiper_model">
                     <div class="auto_park_slider-wrapper swiper-wrapper">
+                        <div class="gallery_item swiper-slide">
+                            <a class="gallery_item_link" href="kamaz.html">
+                                <picture>
+                                    <!-- <img class="gallery_item-img" src="../img/layout/pages/main/slider/kamaz.png" alt="kamaz" fetchpriority="high"> -->
+                                </picture>
+                            </a>
+                        </div>
                         <div class="gallery_item active swiper-slide">
                             <a class="gallery_item_link" href="#">
                                 <picture>
