--- a/src/pages/kamaz.html
+++ b/src/pages/kamaz.html
@@ -272,8 +272,8 @@
     </div>
 </div>
 
-<div class="tech_spec__interior" id="amarok">
-    <p class="tech_spec__interior-title">Volkswagen Amarok</p>
+<div class="tech_spec__interior" id="kamaz">
+    <p class="tech_spec__interior-title">Камаз</p>
     <div class="tech_spec__interior-wrapper">
         <div class="tech_spec__interior-btn">
             <span class="tech_spec__interior-text">В салон</span>
@@ -296,6 +296,13 @@
                     <div class="auto_park_slider-wrapper swiper-wrapper">
                         <div class="gallery_item active swiper-slide">
                             <a class="gallery_item_link" href="#">
+                                <picture>
+                                    <!-- <img class="gallery_item-img" src="../img/layout/pages/main/slider/kamaz.png" alt="kamaz" fetchpriority="high"> -->
+                                </picture>
+                            </a>
+                        </div>
+                        <div class="gallery_item swiper-slide">
+                            <a class="gallery_item_link" href="amarok.html">
                                 <picture>
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" fetchpriority="high">
                                 </picture>
