--- a/src/pages/kamaz.html
+++ b/src/pages/kamaz.html
@@ -169,7 +169,6 @@
                 <div class="tech_spec__titles hidden">
                     <div class="text_spec__texts">
                         <p class="tech_spec__title">Дорожный патруль</p>
-                        <!--                                <p class="tech_spec__subtitle">Автомобиль службы помощи ЦОДД</p>-->
                     </div>
                 </div>
                 <div class="tech_spec__mission-panel hidden">
@@ -178,7 +177,6 @@
                     <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
                     <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                     <p class="tech_spec__text">Задача</p>
-<!--                    <div class="tech_spec__mission-panel-background"></div>-->
                 </div>
                 <div class="tech_spec__mission hidden">
                     <p class="tech_spec__text-descr">Помощь на&nbsp;месте аварий, буксировка неисправной и&nbsp;возвращение на&nbsp;колёса перевернувшейся техники, прикрытие места ДТП на&nbsp;скоростных магистралях, оформление европротоколов и&nbsp;регулировка движения</p>
@@ -189,7 +187,6 @@
                     <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
                     <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                     <p class="tech_spec__text">Экипировка</p>
-<!--                    <div class="tech_spec__outfit-panel-background"></div>-->
                 </div>
                 <div class="tech_spec__outfit hidden">
                     <ul class="tech_spec__outfit-list">
@@ -592,9 +589,9 @@
 
     const IframeObject = {
         AR_ON: 'https://app.vectary.com/p/1awk5uLRPcu5rk4z0CzdTJ',
-        AR_OFF: 'https://app.vectary.com/p/0Q3y1HJQrvvFuRdiFhsjkk',
+        AR_OFF: 'https://app.vectary.com/p/2awJgefSbBEMrOBWSjJ2T7',
         XHR_AR_ON: 'https://d15a7j1h1vwzab.cloudfront.net/cb/d1/3f/cbd13f3a-4060-49f0-bab7-9d7109fd24df',
-        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/07a50004-10c5-4577-9118-e85c0dcde760/07a50004-10c5-4577-9118-e85c0dcde760',
+        XHR_AR_OFF: 'https://d15a7j1h1vwzab.cloudfront.net/b0/1f/c1/b01fc1d0-ef7d-44a8-a0aa-6aa3d37f42dd',
     };
     let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
     let screenWidth = window.innerWidth;
