--- a/src/index.html
+++ b/src/index.html
@@ -302,7 +302,7 @@
                                 </p>
                             </div>
                             <div class="main_button-3">
-                                <a class="main_info-link" href="amarok.html">в&nbsp;виртуальный гараж</a>
+                                <a class="main_info-link" href="kamaz.html">в&nbsp;виртуальный гараж</a>
                             </div>
                         </div>
                     </div>
@@ -318,12 +318,12 @@
                     </div>
                     <div class="traffic_patrol-text-2">
                         <p class="traffic_patrol-text">
-                            Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве.<br>Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при&nbsp;поломке или аварии
+                            Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве.<br>Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при&nbsp;поломке или&nbsp;аварии
                         </p>
                     </div>
                     <div class="traffic_patrol-text-4">
                         <p class="traffic_patrol-text">
-                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, фургон, грузовик, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом ЦОДД
+                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, фургон, грузовик, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом&nbsp;ЦОДД
                         </p>
                     </div>
                     <div class="traffic_patrol-text-5">
@@ -405,14 +405,6 @@
                             </div>
                         </a>
                     </div>
-                    <!-- <div class="traffic_patrol-slider-buttons InGrid">
-                        <div class="btn_prev">
-                            <img class="prev_img" src="./img/layout/pages/main/slider/arrow_green.svg" alt="btn_prev">
-                        </div>
-                        <div class="btn_next">
-                            <img class="next_img" src="./img/layout/pages/main/slider/arrow_green.svg" alt="btn_next">
-                        </div>
-                    </div> -->
                     <div class="traffic_patrol-slide-kamaz">
                         <div class="traffic_patrol_slider-wrapper swiper1">
                             <div class="traffic_patrol_slider swiper-wrapper">
@@ -500,111 +492,9 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="traffic_patrol-new_NOSLIDER">
-                        <a class="garage_model_card NOSLIDE_1" href="amarok.html">
-                            <div class="slid_img">
-                                <picture>
-                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап" fetchpriority="high">
-                                </picture>
-                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
-                            </div>
-                            <div class="slid_info">
-                                <div class="slid_info-desc">
-                                    <p class="slid_info-title">Дорожный патруль</p>
-                                    <p class="slid_info-text">Пикап</p>
-                                </div>
-                                <div class="slid_info-link">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                        <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                            <rect width="18" height="18" fill="#D9D9D9"/>
-                                        </mask>
-                                        <g mask="url(#mask0_1137_313)">
-                                            <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                        </g>
-                                    </svg>
-                                </div>
-                            </div>
-                        </a>
-                        <a class="garage_model_card NOSLIDE_2" href="ford.html">
-                            <div class="slid_img">
-                                <picture>
-                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Патрульный фургон" fetchpriority="high">
-                                </picture>
-                                <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>
-                            </div>
-                            <div class="slid_info">
-                                <div class="slid_info-desc">
-                                    <p class="slid_info-title">Дорожный патруль</p>
-                                    <p class="slid_info-text">Фургон</p>
-                                </div>
-                                <div class="slid_info-link">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                        <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                            <rect width="18" height="18" fill="#D9D9D9"/>
-                                        </mask>
-                                        <g mask="url(#mask0_1137_313)">
-                                            <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                        </g>
-                                    </svg>
-                                </div>
-                            </div>
-                        </a>
-                    </div> -->
-                    <!-- <div class="traffic_patrol-no-slide-7 parentCardForLargeMonitor">
-                        <a class="garage_model_card" href="amarok.html">
-                            <div class="slid_img">
-                                <picture>
-                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап" fetchpriority="high">
-                                </picture>
-                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
-                            </div>
-                            <div class="slid_info">
-                                <div class="slid_info-desc">
-                                    <p class="slid_info-title">Дорожный патруль</p>
-                                    <p class="slid_info-text">Пикап</p>
-                                </div>
-                                <div class="slid_info-link">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                        <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                            <rect width="18" height="18" fill="#D9D9D9"/>
-                                        </mask>
-                                        <g mask="url(#mask0_1137_313)">
-                                            <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                        </g>
-                                    </svg>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="traffic_patrol-no-slide-8 parentCardForLargeMonitor">
-                        <a class="garage_model_card" href="ford.html">
-                            <div class="slid_img">
-                                <picture>
-                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Патрульный фургон" fetchpriority="high">
-                                </picture>
-                                <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>
-                            </div>
-                            <div class="slid_info">
-                                <div class="slid_info-desc">
-                                    <p class="slid_info-title">Дорожный патруль</p>
-                                    <p class="slid_info-text">Фургон</p>
-                                </div>
-                                <div class="slid_info-link">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                        <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                            <rect width="18" height="18" fill="#D9D9D9"/>
-                                        </mask>
-                                        <g mask="url(#mask0_1137_313)">
-                                            <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                        </g>
-                                    </svg>
-                                </div>
-                            </div>
-                        </a>
-                    </div> -->
                     <div class="traffic_patrol-text-mobile-1">
                         <p class="traffic_patrol-text">
-                            Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве. Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при&nbsp;поломке или аварии
+                            Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве. Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при&nbsp;поломке или&nbsp;аварии
                         </p>
                         <p class="traffic_patrol-text">
                             В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, фургон, грузовик, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом&nbsp;ЦОДД
